# Tejo-C-smico

./: .gitignore  README.md
src/: CMakeLists.txt  juego.cpp  juego.h  main.cpp  recursos.qrc  tejo.cpp  tejo.h
